--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,17 @@ nav ul a:not(.btn)::after{
 nav ul a:hover::after{
   width: 100%;
 }
+nav .menu-icon{
+  cursor: pointer;
+  font-size: 25px;
+  color: white;
+  display: none;
+}
+nav .close-icon{
+  display: npne;
+  font-size: 30px;
+  color: white;
+}
 .banner{
   display:flex;
   justify-content: center;
@@ -198,4 +209,35 @@ nav ul a:hover::after{
 .footer p{
   color: white;
   margin-top: 10px;
+}
+@media(max-width: 830px){
+  .ul{
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: #184b88;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    clip-path: circle(0% at 100% 0);
+    transition: 0.7s;
+  }
+  .ul.open{
+    clip-path: circle(141.4% at 100% 0);
+  }
+  .ul a{
+    margin: 10px 0;
+    font-size: 16px;
+  }
+  nav .menu-icon{
+    display: block;
+  }
+  nav .close-icon{
+    display: block;
+    position: absolute;
+    top: 46px;
+    right: 28px;
+  }
 }
