--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,26 @@ nav .close-icon{
   color: white;
   margin-top: 10px;
 }
+.sobre .container{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.sobre .sobre-text{
+  width: 50%;
+  padding-right: 40px;
+}
+.sobre .sobre-text p{
+  margin: 18px 0;
+  color: #000000a6;
+}
+.sobre .sobre-img{
+  width: 50%;
+}
+.sobre .sobre-img img{
+  width: 100%;
+  border-radius: 10px;
+}
 @media(max-width: 830px){
   .ul{
     position: fixed;
